CI ignore kill not stopping pyproxy.py
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/certificate/tasks/02_ssl_eof_error.yml
+++ b/tests/integration/targets/certificate/tasks/02_ssl_eof_error.yml
@@ -91,3 +91,5 @@
 
     - name: kill pyproxy.py after
       ansible.builtin.shell: sudo kill $(pgrep -f '{{ pyproxy_cmd }}')
+      # not sure why this fails in github CI (different disto, or we are in docker?)
+      failed_when: false
