--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -35,7 +35,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: ${{ env.WORKDIR }}
+      - run: apt install -y git make rsync
       - run: make docs
+        env:
+          ANSIBLE_COLLECTIONS_PATH: /work-dir
       - run: ls -al docs/build/html
 
   sanity-test:
