CI fix ANSIBLE_COLLECTIONS_PATH for docs
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -38,7 +38,7 @@ jobs:
       - run: apt install -y git make rsync
       - run: make docs
         env:
-          ANSIBLE_COLLECTIONS_PATH: /work-dir
+          ANSIBLE_COLLECTIONS_PATH: $GITHUB_WORKSPACE/work-dir
       - run: ls -al docs/build/html
 
   sanity-test:
