--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -48,6 +48,12 @@ jobs:
     defaults:
       run:
         working-directory: ${{ env.WORKDIR }}
+    strategy:
+      fail-fast: false
+      matrix:
+        sc_host:
+          - https://10.5.11.200
+          - https://10.5.11.201
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -58,7 +64,7 @@ jobs:
       - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
         with:
           ci_config_all: ${{ vars.CI_CONFIG_HC_IP50 }}
-          sc_host: https://10.5.11.200
+          sc_host: ${{ matrix.sc_host }}
           sc_username: admin
           sc_password: ${{ secrets.CI_CONFIG_HC_IP200_SC_PASSWORD }}
           smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
