--- a/tests/integration/targets/role_check_local_time/tasks/main.yml
+++ b/tests/integration/targets/role_check_local_time/tasks/main.yml
@@ -12,15 +12,11 @@
       vars:
         time_zone: "{{ ansible_date_time.tz }}"
         time_interval: "{{ ansible_date_time.hour }}:00-{{ ansible_date_time.hour }}:59"
-      register: result # this is not a role result
     
-    - ansible.builtin.debug:
-        var: result
-    
-      # How to register role result??
-    # - ansible.builtin.assert:
-    #     that:
-    #       - "'Local time is in required time interval' in result.msg" 
+    # it can fail when run near x:59
+    - ansible.builtin.assert:
+        that:
+          - "'Local time for time zone {{ ansible_date_time.tz }} is in required time interval {{ ansible_date_time.hour }}:00-{{ ansible_date_time.hour }}:59' in local_time_msg" 
 
     - name: Check that local time doesn't meet required time interval
       ansible.builtin.include_role:
@@ -30,9 +26,8 @@
       vars:
         time_zone: "{{ ansible_date_time.tz }}"
         time_interval: "{{ ansible_date_time.hour }}:00-{{ ansible_date_time.hour }}:01"
-      register: result # this is not a role result
-    
-      # How to register role result??
-    # - ansible.builtin.assert:
-    #     that:
-    #       - "'Local time is not in required time interval' in result.msg" 
+
+    # it can fail when run near x:00
+    - ansible.builtin.assert:
+        that:
+          - "'Local time for time zone {{ ansible_date_time.tz }} is not in required time interval {{ ansible_date_time.hour }}:00-{{ ansible_date_time.hour }}:01' in local_time_msg" 
