--- a/roles/check_local_time/tasks/main.yml
+++ b/roles/check_local_time/tasks/main.yml
@@ -1,13 +1,15 @@
 ---
 - name: Is executable python3
-  ansible.builtin.shell: which python3
+  ansible.builtin.command: which python3
   register: executable
-  ignore_errors: True  # if there is no python3, the shell will fail
+  changed_when: false  # to avoid ansible-lint error "no-changed-when: Commands should not change things if nothing needs doing."
+  ignore_errors: true  # if there is no python3, the shell will fail
 
 - name: Is executable python
-  ansible.builtin.shell: which python
+  ansible.builtin.command: which python
   register: executable_python
-  ignore_errors: True  # if there is no python, the shell will fail
+  changed_when: false  # to avoid ansible-lint error "no-changed-when: Commands should not change things if nothing needs doing."
+  ignore_errors: true  # if there is no python, the shell will fail
 
 - name: If not python3, then set executable to python
   ansible.builtin.set_fact: executable="{{ executable_python }}"
