Add check_local_time role to version_update_single_node_example

--- a/examples/time_zone_info.yml
+++ b/examples/time_zone_info.yml
@@ -5,7 +5,7 @@
   gather_facts: false
 
   tasks:
-    - name: List current Time Zone entries
+    - name: Get current Time Zone
       scale_computing.hypercore.time_zone_info:
       register: time_zone_info
     - ansible.builtin.debug:
