--- a/examples/time_server_info.yml
+++ b/examples/time_server_info.yml
@@ -5,7 +5,7 @@
   gather_facts: false
 
   tasks:
-    - name: List current Time Server entries
+    - name: Get current Time Server
       scale_computing.hypercore.time_server_info:
       register: time_server_info
     - ansible.builtin.debug:
