--- a/examples/version_update_single_node.yml
+++ b/examples/version_update_single_node.yml
@@ -10,6 +10,22 @@
     desired_version: 9.1.23.210897
 
   tasks:
+    - name: Get host's time zone
+      scale_computing.hypercore.time_zone_info:
+      register: time_zone_info
+
+    - ansible.builtin.assert:
+        fail_message: Time zone is not set on the host
+        that:
+          - time_zone_info.record
+
+    - name: Check that local time meets required time interval
+      ansible.builtin.include_role:
+        name: scale_computing.hypercore.check_local_time
+      vars:
+        time_zone: "{{ time_zone_info.record.zone }}"
+        time_interval: 22:00-6:00
+
     - name: Update HyperCore single-node system to a desired version
       include_role:
         name: scale_computing.hypercore.version_update_single_node
