Store rendered html as github artifact
HTML will be there for manual review.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -40,6 +40,10 @@ jobs:
         env:
           ANSIBLE_COLLECTIONS_PATH: $GITHUB_WORKSPACE/work-dir
       - run: ls -al docs/build/html
+      - uses: actions/upload-artifact@v3
+        with:
+          name: docs-html
+          path: work-dir/ansible_collections/scale_computing/hypercore/docs/build/html
 
   sanity-test:
     runs-on: [ubuntu-latest]
