--- a/tests/integration/targets/virtual_disk/tasks/main.yml
+++ b/tests/integration/targets/virtual_disk/tasks/main.yml
@@ -4,6 +4,10 @@
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
+  vars:
+    expected_virtual_disk_replication_factors:
+      - 1  # (virtual) single node systems have no replication
+      - 2  # real 3 node systems
 
 # ----------------------------------Setup------------------------------------------------------------------------
   block:
@@ -58,7 +62,7 @@
           - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.qcow2"
           - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
           - uploaded_virtual_disk.record.size == 10485760
 
     - name: Assert that virtual disk .qcow2 exist on cluster
@@ -73,7 +77,7 @@
           - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.qcow2"
           - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
           - virtual_disk_file.records.0.size == 10485760
           - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
@@ -91,7 +95,7 @@
           - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.qcow2"
           - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
           - uploaded_virtual_disk.record.size == 10485760
           - uploaded_virtual_disk.diff.before == uploaded_virtual_disk.diff.after
 
@@ -107,7 +111,7 @@
           - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.qcow2"
           - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
           - virtual_disk_file.records.0.size == 10485760
           - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
@@ -125,7 +129,7 @@
           - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.vmdk"
           - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
           - uploaded_virtual_disk.record.size == 10485760
 
     - name: Assert that virtual disk .vmdk exist on cluster
@@ -140,7 +144,7 @@
           - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.vmdk"
           - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
           - virtual_disk_file.records.0.size == 10485760
           - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
@@ -158,7 +162,7 @@
           - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.vmdk"
           - uploaded_virtual_disk.record.block_size == 1048576
-          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.replication_factor in expected_virtual_disk_replication_factors
           - uploaded_virtual_disk.record.size == 10485760
           - uploaded_virtual_disk.diff.before == uploaded_virtual_disk.diff.after
 
@@ -174,7 +178,7 @@
           - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.vmdk"
           - virtual_disk_file.records.0.block_size == 1048576
-          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.replication_factor in expected_virtual_disk_replication_factors
           - virtual_disk_file.records.0.size == 10485760
           - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
