--- a/examples/virtual_disk.yml
+++ b/examples/virtual_disk.yml
@@ -10,46 +10,34 @@
     image_remove_old: false
 
   tasks:
-    # # ------------------------------------------------------
+    # ------------------------------------------------------
     - name: Download Virtual Disk {{ image_filename }} from URL
       ansible.builtin.get_url: # TODO: what if file doesn't download completely?
         url: "{{ image_url }}"
         dest: /tmp/{{ image_filename }}
 
-    - name: Get the Virtual Disk size
-      ansible.builtin.stat:
-        path: /tmp/{{ image_filename }}
-      register: disk_file_info
-
-    # TODO
-    # - name: (Optionally) remove existing Virtual Disk {{ image_filename }} from HyperCore
-    #   scale_computing.hypercore.api:
-    #     action: get
-    #     cluster_instance:
-    #       host: "{{ sc_host }}"
-    #       username: "{{ sc_username }}"
-    #       password: "{{ sc_password }}"
-    #     endpoint: "/rest/v1/VirtualDisk"
-    #   register: virtualDiskResult
+    - name: (Optionally) remove existing Virtual Disk {{ image_filename }} from HyperCore
+      when: image_remove_old | bool
+      scale_computing.hypercore.virtual_disk:
+        name: "{{ item }}"
+        state: absent
+      loop:
+        - "uploading-{{ image_filename }}"
+        - "{{ image_filename }}"
 
     # ------------------------------------------------------
     - name: Upload Virtual Disk {{ image_filename }} to HyperCore
-      scale_computing.hypercore.api:
-        action: put
-        endpoint: /rest/v1/VirtualDisk/upload
-        data:
-          filename: "{{ image_filename }}"
-          filesize: "{{ disk_file_info.stat.size }}"
+      scale_computing.hypercore.virtual_disk:
         source: /tmp/{{ image_filename }}
-      register: uploadResult
+        name: "{{ image_filename }}"
+        state: present
 
     # ------------------------------------------------------
     - name: Get Information About the uploaded Virtual Disk in HyperCore
-      scale_computing.hypercore.api:
-        action: get
-        endpoint: /rest/v1/VirtualDisk/{{ uploadResult.record.createdUUID }}
+      scale_computing.hypercore.virtual_disk_info:
+        name: "{{ image_filename }}"
       register: result
 
     - name: Show uploaded disk info
       debug:
-        var: result.record[0]
+        var: result.records[0]
