--- a/tests/integration/targets/vm_clone/tasks/10_clone_stopped.yml
+++ b/tests/integration/targets/vm_clone/tasks/10_clone_stopped.yml
@@ -22,6 +22,7 @@
       - source_info.records.0.boot_devices | length == cloned_info.records.0.boot_devices | length
       - source_info.records.0.disks | length ==  cloned_info.records.0.disks | length
       - source_info.records.0.nics | length ==  cloned_info.records.0.nics | length
+      - source_info.records.0.nics.0.mac !=  cloned_info.records.0.nics.0.mac
       - source_info.records.0.node_affinity == cloned_info.records.0.node_affinity
 
 # ----------------------------------Idempotence check------------------------------------------------------------------------
@@ -49,4 +50,5 @@
       - source_info.records.0.boot_devices | length == cloned_info.records.0.boot_devices | length
       - source_info.records.0.disks | length ==  cloned_info.records.0.disks | length
       - source_info.records.0.nics | length ==  cloned_info.records.0.nics | length
+      - source_info.records.0.nics.0.mac !=  cloned_info.records.0.nics.0.mac
       - source_info.records.0.node_affinity == cloned_info.records.0.node_affinity
