--- a/tests/integration/targets/vm_clone/tasks/11_clone_stopped_cloudinit.yml
+++ b/tests/integration/targets/vm_clone/tasks/11_clone_stopped_cloudinit.yml
@@ -28,6 +28,7 @@
       - source_info.records.0.boot_devices | length == cloned_cloud_init_info.records.0.boot_devices | length
       - source_info.records.0.disks | length != cloned_cloud_init_info.records.0.disks | length
       - source_info.records.0.nics | length == cloned_cloud_init_info.records.0.nics | length
+      - source_info.records.0.nics.0.mac !=  cloned_info.records.0.nics.0.mac
       - source_info.records.0.node_affinity == cloned_cloud_init_info.records.0.node_affinity
 
 # ----------------------------------Idempotence check------------------------------------------------------------------------
@@ -61,4 +62,5 @@
       - source_info.records.0.boot_devices | length == cloned_cloud_init_info.records.0.boot_devices | length
       - source_info.records.0.disks | length != cloned_cloud_init_info.records.0.disks | length
       - source_info.records.0.nics | length == cloned_cloud_init_info.records.0.nics | length
+      - source_info.records.0.nics.0.mac !=  cloned_info.records.0.nics.0.mac
       - source_info.records.0.node_affinity == cloned_cloud_init_info.records.0.node_affinity
