Test preserve_mac_address works
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
+++ b/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
@@ -36,3 +36,4 @@
     - XLAB-vm_clone_CI-test-clone
     - XLAB-vm_clone_CI-test-cloud_init-clone
     - XLAB-vm_clone-while-running-test-clone
+    - XLAB-vm_clone_CI-test-preserve-mac-clone
