--- a/tests/integration/targets/syslog_server/tasks/01_syslog_server_info.yml
+++ b/tests/integration/targets/syslog_server/tasks/01_syslog_server_info.yml
@@ -1,8 +1,8 @@
 ---
 - environment:
     SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username }}"
-    SC_PASSWORD: "{{ sc_password }}"
+    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
+    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
   vars:
     # payload to be POST-ed to api
     syslog_server_config_5:
