--- a/tests/integration/targets/vm/tasks/02_shutdown.yml
+++ b/tests/integration/targets/vm/tasks/02_shutdown.yml
@@ -5,8 +5,8 @@
 # We should test correct force shutdown too.
 - environment:
     SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username }}"
-    SC_PASSWORD: "{{ sc_password }}"
+    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
+    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
   vars:
     # ISO has no APCI
