--- a/tests/integration/targets/vm/tasks/03_rename.yml
+++ b/tests/integration/targets/vm/tasks/03_rename.yml
@@ -2,8 +2,8 @@
 # This is a part of the vm module; testing vm rename (vm_name and vm_name_new params)
 - environment:
     SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username }}"
-    SC_PASSWORD: "{{ sc_password }}"
+    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
+    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
   vars:
      vm_name_a: "vm-rename-test-a"
