--- a/tests/integration/targets/email_alert/tasks/01_email_alert_info.yml
+++ b/tests/integration/targets/email_alert/tasks/01_email_alert_info.yml
@@ -1,8 +1,8 @@
 ---
 - environment:
     SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username }}"
-    SC_PASSWORD: "{{ sc_password }}"
+    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
+    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
 
   block:
     - name: Retrieve info about Email alert recipients
