--- a/tests/integration/targets/inventory/run_ansible_both_true_tests.yml
+++ b/tests/integration/targets/inventory/run_ansible_both_true_tests.yml
@@ -4,8 +4,8 @@
   gather_facts: False
   environment:
     SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username }}"
-    SC_PASSWORD: "{{ sc_password }}"
+    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
+    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
 
   tasks:
     - block:
